feat: update authentication flow and add user details in response

--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,5 @@ SCOUT_DRIVER=meilisearch
 MEILISEARCH_HOST=http://meilisearch:7700
 
 MEILISEARCH_NO_ANALYTICS=false
-ADMIN_PASSWORD=admin123456
+USER_TEST_EMAIL=user@prueba.com
+USER_TEST_PASSWORD=password
