chore: add cors config

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,4 @@ MEILISEARCH_HOST=http://meilisearch:7700
 MEILISEARCH_NO_ANALYTICS=false
 USER_TEST_EMAIL=user@prueba.com
 USER_TEST_PASSWORD=password
+FRONTEND_URL=http://localhost:5173
