--- a/DockerFile
+++ b/DockerFile
@@ -10,9 +10,9 @@ WORKDIR /var/www/html
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 RUN composer install --no-dev --optimize-autoloader
 
-RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/cache
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/cache /var/www/html/bootstrap/cache
 
 COPY docker/nginx.conf /etc/nginx/sites-available/default
 EXPOSE 80
 
-CMD php artisan migrate --force && service nginx start && php-fpm
+CMD php artisan migrate --force && php artisan storage:link && service nginx start && php-fpm
