--- a/DockerFile
+++ b/DockerFile
@@ -1,18 +1,27 @@
-FROM php:8.3-fpm
+FROM php:8.4-fpm
 
 RUN apt-get update && apt-get install -y \
-    libpng-dev libjpeg-dev libfreetype6-dev zip git unzip nginx \
-    && docker-php-ext-install pdo_mysql gd
+    libpng-dev \
+    libjpeg-dev \
+    libfreetype6-dev \
+    libzip-dev \
+    zip \
+    git \
+    unzip \
+    nginx \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install pdo_mysql gd bcmath zip
 
 COPY . /var/www/html
 WORKDIR /var/www/html
 
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-RUN composer install --no-dev --optimize-autoloader
 
-RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/cache /var/www/html/bootstrap/cache
+RUN composer install --no-dev --optimize-autoloader --no-interaction --ignore-platform-req=php
+
+RUN chown -R www-data:www-data /var/www/html/storage /var/www/html/bootstrap/cache
 
 COPY docker/nginx.conf /etc/nginx/sites-available/default
 EXPOSE 80
 
-CMD php artisan migrate --force && php artisan storage:link && service nginx start && php-fpm
+CMD php artisan migrate --seed --force && php artisan storage:link && service nginx start && php-fpm
