chore: add railway config

--- a/composer.json
+++ b/composer.json
@@ -88,7 +88,9 @@
             "php-http/discovery": true
         },
         "platform": {
-            "php": "8.4.0"
+            "php": "8.4.0",
+            "ext-bcmath": "1",
+            "ext-gd": "1"
         }
     },
     "minimum-stability": "stable",
